--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ django-pagination-py3==1.1.1
 redis==2.10.3
 django-redis==3.7.2
 APScheduler==3.0.1
-django-xadmin==0.5.0
+django-reversion==1.8.5
+django-crispy-forms==1.4.0
