--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ APScheduler==3.0.1
 django-reversion==1.8.5
 django-crispy-forms==1.4.0
 xlwt==0.7.5
+git+https://github.com/sshwsfc/django-xadmin.git@django1.7
