基于django1.9重新改写

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-Django==1.8
-dj-database-url==0.3.0
-pytz==2014.9
-gunicorn==19.1.1
-whitenoise==1.0.3
-psycopg2==2.5.4
+pytz==2016.3
+gunicorn==19.4.5
+whitenoise==3.0
+psycopg2==2.6.1
+redis==2.10.5
+APScheduler==3.1.0
+xlwt==1.0.0
+whoosh==2.7.4
+jieba==0.38
+git+https://github.com/sshwsfc/django-xadmin.git@django1.9
+Django==1.9.5
+dj-database-url==0.4.1
 django-pagination-py3==1.1.1
-redis==2.10.3
-django-redis==3.7.2
-APScheduler==3.0.1
-django-reversion==1.8.5
-xlwt==0.7.5
-git+https://github.com/sshwsfc/django-xadmin.git@django1.8
-whoosh==2.6.0
-jieba==0.35
-django-haystack==2.3.1
+django-redis==4.4.2
+django-reversion==1.10.2
+django-haystack==2.4.1
+django-crispy-forms==1.6.0
